dwba4semana01PT3009718

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>DWBA4 - Semana 01</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <h1>Atividade da Semana 01</h1>
     <p>Aluno: Carolina de Faria Coutinho</p>
     <p>Prontuário: PT3009718</p>
+    <p>Tecnologia em Análise e Desenvolvimento de Sistemas</p>
+    <p>Campus Pirituba</p>
   </body>
 </html>
